--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
             justify-content: center;
             align-items: center;
             padding-left: 1%;
+	    overflow-y: hidden; /* Hide vertical scrollbar */
+            overflow-x: hidden; /* Hide horizontal scrollbar */
 	    
         }
 
