--- a/index.html
+++ b/index.html
@@ -71,13 +71,15 @@
 <body>
 
     <div class="container">
-        <h1>Nehad Zein is a writer who builds experiential brands.</h1>
-        <p>Check out his <a href="https://exaltedpoise.com">public journal</a> ✒️</p>
+        <h1>Nehad Zein is a writer who helps build experiential brands.</h1>
+        <p>Check out his <a href="https://exaltedpoise.com">public journal</a> 🖋️</p>
 
         <div class="icons">
             <a href="https://www.linkedin.com/in/nehadzein/"><i class="fab fa-linkedin"></i></a>
             <a href="mailto:writer@nehadzein.com"><i class="fas fa-envelope"></i></a>
-        </div>
+              <a href="https://drive.google.com/file/d/1qGqjRbNBvksAfgB9A-T6oxDvzalriziD/view?usp=sharing" target="_blank" aria-label="CV">
+                <i class="fa-solid fa-file-lines"></i></a>
+	</div>
     </div>
 
 </body>
