--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <body>
 
     <div class="container">
-        <h1>Nehad Zein is a luxury copywriter building brands that endure time.</h1>
+        <h1>Nehad Zein is a copywriter who makes luxury brands timeless.</h1>
         <p>Check out his <a href="https://exaltedpoise.com">public journal</a> 🖋️</p>
 
         <div class="icons">
