--- a/index.html
+++ b/index.html
@@ -71,8 +71,9 @@
 <body>
 
     <div class="container">
-        <h1>Nehad Zein is a copywriter who makes luxury brands timeless.</h1>
-        <p>Check out his <a href="https://exaltedpoise.com">public journal</a> 🖋️</p>
+        <h1>Hi, I'm Nehad Zein. 
+<br>A copywriter who builds timeless luxury brands.</h1>
+        <p>Check out my <a href="https://exaltedpoise.com">public journal.</a> 🖋️</p>
 
         <div class="icons">
             <a href="https://www.linkedin.com/in/nehadzein/"><i class="fab fa-linkedin"></i></a>
